# Finite-Elements-EM-Solver

./: README.md  main.cpp  meson.build  parse_msh.cpp  parse_msh.hpp
test/: square_regular_v2_ascii.msh  square_regular_v4_asciii.msh
